Update sonar-plugin/javascript-checks/src/main/java/org/sonar/javascript/checks/NoUnescapedEntitiesCheck.java
Co-authored-by: Yassin Kammoun <52890329+yassin-kammoun-sonarsource@users.noreply.github.com>